[package]
name = "suffix"
version = "0.1.32"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Suffix arrays and suffix trees."
documentation = "http://burntsushi.net/rustdoc/suffix/"
homepage = "https://github.com/BurntSushi/suffix"
repository = "https://github.com/BurntSushi/suffix"
readme = "README.md"
keywords = ["suffix", "text", "search", "index"]
license = "Unlicense"

[lib]
name = "suffix"
path = "src/lib.rs"

[[bin]]
name = "suffix"
path = "src/main.rs"
doc = false
test = false
bench = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "bench"
path = "tests/bench.rs"

[profile.release]
opt-level = 3
# lto = true

[profile.bench]
opt-level = 3

[dependencies]
rustc-serialize = "*"
docopt = "*"

[dev-dependencies]
quickcheck = "*"
