[package]
name = "suffix"
version = "0.1.34"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Suffix arrays and suffix trees."
documentation = "http://burntsushi.net/rustdoc/suffix/"
homepage = "https://github.com/BurntSushi/suffix"
repository = "https://github.com/BurntSushi/suffix"
readme = "README.md"
keywords = ["suffix", "text", "search", "index"]
license = "Unlicense"

[lib]
name = "suffix"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "bench"
path = "tests/bench.rs"

[profile.bench]
opt-level = 3

[dev-dependencies]
quickcheck = "*"
