[package]
name = "stree_cmd"
version = "0.1.36"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for creating and visualizing suffix trees."
homepage = "https://github.com/BurntSushi/suffix"
repository = "https://github.com/BurntSushi/suffix"
readme = "../README.md"
keywords = ["suffix", "text", "search", "index", "tree"]
license = "Unlicense"

[[bin]]
name = "stree"
path = "src/main.rs"
doc = false
test = false
bench = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
docopt = "*"
rustc-serialize = "*"

[dependencies.suffix]
path = ".."
version = "*"
