[package]
name = "stree_cmd"
version = "0.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for creating and visualizing suffix trees."
homepage = "https://github.com/BurntSushi/suffix"
repository = "https://github.com/BurntSushi/suffix"
readme = "../README.md"
keywords = ["suffix", "text", "search", "index", "tree"]
license = "Unlicense/MIT"

[[bin]]
name = "stree"
path = "src/main.rs"
doc = false
test = false
bench = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"

[dependencies.suffix_tree]
path = "../suffix_tree"
version = "0.2"
