[package]
publish = false
name = "stree_cmd"
version = "0.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tool for creating and visualizing suffix trees."
homepage = "https://github.com/BurntSushi/suffix"
repository = "https://github.com/BurntSushi/suffix"
readme = "../README.md"
keywords = ["suffix", "text", "search", "index", "tree"]
license = "Unlicense OR MIT"

[[bin]]
name = "stree"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
docopt = "1"
serde = "1"
serde_derive = "1"

[dependencies.suffix_tree]
path = "../suffix_tree"
version = "0.3"
