[package]
publish = false
name = "suffix_tree"
version = "0.2.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Suffix trees."
documentation = "http://burntsushi.net/rustdoc/suffix/"
homepage = "https://github.com/BurntSushi/suffix"
repository = "https://github.com/BurntSushi/suffix"
readme = "README.md"
keywords = ["suffix", "text", "search", "index", "tree"]
license = "Unlicense/MIT"

[lib]
name = "suffix_tree"
path = "src/lib.rs"

[dependencies.suffix]
path = ".."
version = "1"

[dev-dependencies]
quickcheck = "0.4"
